- Charles Tabony's (vectorshifts's) highlighter stack patch

- ! is replace all in replace prompt

- Turn off UTF-8 when we enter hex mode

- Call ttsig on vfile I/O errors.

- Abort cleanly when malloc returns NULL

- Add reload command to reload file from disk

- Modify configure scrips to use docdir for extra documents and
  datadir/joe for syntax and i18n files.

- Don't use bold yellow, it's bad for white screens.

- Fix TeX highlighter: don't highlight "

- Make mail.jsf more forgiving for those of us who still use old UNIX mail

- Fix file rename bugs

- Improve ubop: can reformat a block of paragraphs again.  Reformat
  of adjacent paragraphs working again.

- Improve XML highlighter: allow \r in whitespace

JOE 3.6

- Preserve setuid bit

- Fix problem where backup file did not get time of original

- New diff highlighter

- Fix paragraph format when overtype is on

- Fix non-french spacing

- Fix bug with joe +2 on single line files

- Add syntax file for .jsf files

- Add ASCII table to joerc help

- ^KD renames file

- Improve HTML highlighter... if you see <? it's probably a script...

- Check for EINTR from ioctl

- > allowed in xml content

- Add -flowed option: adds a space after paragraph lines.

- Fix problem in German .po file

- Added -no_double_quoted and -tex_comment for TeX

- Added -break_symlinks option and changed -break_links option to not
  break symbolic links.

- Paragraph format of single line paragraph is indented only if autoindent
  is enabled. (jqh)

- Guessindent no longer overrides istep if indendation is space.

- Fix low limit of lmargin

- Fix ^G in perl mode when you hit it on second brace in:
	{\'
	\'}

- Fix LUA highlighter (dirk_s)

- Fix crash from bad va_arg usage (dnelson)

- Fix crash from mktmp() not generating perm string (dnelson)

- Improved conf.jsf (dirk_s)

- Added local option (-nobackup) to suppress backup files (peje)

- Add Matlab syntax file (neer)

- Improve mail syntax highlighter (jqh)
