@@ -1,3 +1,7 @@
+- Allow backslashes in filenames
+
+- Fix %A to print unicode
+
 - Charles Tabony's (vectorshifts's) highlighter stack patch
 
 - ! is replace all in replace prompt
